# cs5625-final-proejct

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GitHubURL.txt  README.md
Demo/: DemoApp.cpp  DemoApp.hpp  Main.cpp  SkyApp.cpp  SkyApp.hpp  TetraApp.cpp  TetraApp.hpp
Final/: Animators.cpp  Animators.h  Bird.cpp  Bird.hpp  BirdNodeAnimator.cpp  BirdNodeAnimator.h  BoatNodeAnimator.cpp  BoatNodeAnimator.h  Import.cpp  Import.h  Main.cpp  MulUtil.cpp  MulUtil.hpp  OceanAnimator.cpp  OceanAnimator.h  OceanScene.cpp  OceanScene.h  PLApp.cpp  PLApp.h  Scene.cpp  Scene.h  SunLightNodeAnimator.cpp  SunLightNodeAnimator.h  Tessendorf.cpp  Tessendorf.h  Timer.cpp  Timer.h  rename_bones.py
GLWrap/: Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  Util.hpp
RTUtil/: Camera.hpp  CameraController.hpp  ImgGUI.cpp  ImgGUI.hpp  Sky.cpp  Sky.hpp  common.hpp  conversions.cpp  conversions.hpp  frame.hpp  geomtools.cpp  geomtools.hpp  microfacet.cpp  microfacet.hpp  output.hpp  sceneinfo.cpp  sceneinfo.hpp
pocketfft_testing/: main.cpp
resources/scenes/: CesiumMan.blend  CesiumMan.glb  README.md  animated-seagull.blend  animated-seagull.glb  animated-seagulls.glb  box.dae  box_info.json  bunnyscene.blend  bunnyscene.dae  bunnyscene.glb  bunnyscene2.blend  bunnyscene2.glb  bunnyscene_info.json  conversion-notes.txt  final.glb  final1.glb  final2.glb  final3.glb  final4.glb  final_30b_rtm.glb  final_30b_rtm_edited_bones.glb  final_final.glb  final_test.glb  multilight.dae  multilight_info.json  seagull-low-poly.blend  seagull-low-poly.glb  smoothbunny.blend  smoothbunny.dae  smoothbunny.glb  staircase_info.json  tree_info.json
resources/shaders/: blur.fs  deferred.vs  deferred_ambient.fs  deferred_geom.fs  deferred_geom_texture.fs  deferred_merge.fs  deferred_ocean_directional.fs  deferred_point.fs  deferred_shader_inputs.fs  deferred_sky.fs  deferred_texture.vs  flat.gs  forward.fs  forward.vs  fsq.vs  lambert.fs  microfacet.fs  min.vs  normal.fs  ocean.vs  skyvis.fs  srgb.fs  sunsky.fs  texturefsq.vs  toon_merge.fs  toon_outline.fs  toon_point.fs
